- first try to unify emi, jei and rei