@@ -2,6 +2,7 @@ package com.rempler.exnihiloadditions.compat.rei.category;
 
 import com.rempler.exnihiloadditions.compat.rei.EXAREIPlugin;
 import com.rempler.exnihiloadditions.compat.rei.display.REIPrecipitateDisplay;
+import com.rempler.exnihiloadditions.compat.shared.RecipeLayoutConstants;
 import me.shedaniel.math.Point;
 import me.shedaniel.math.Rectangle;
 import me.shedaniel.rei.api.client.gui.Renderer;
@@ -17,7 +18,6 @@ import java.util.ArrayList;
 import java.util.List;
 
 public class REIPrecipitateCategory implements DisplayCategory<REIPrecipitateDisplay> {
-
     @Override
     public CategoryIdentifier<? extends REIPrecipitateDisplay> getCategoryIdentifier() {
         return EXAREIPlugin.PRECIPITATE;
@@ -35,36 +35,44 @@ public class REIPrecipitateCategory implements DisplayCategory<REIPrecipitateDis
 
     @Override
     public int getDisplayWidth(REIPrecipitateDisplay display) {
-        return 150;
+        return RecipeLayoutConstants.PRECIPITATE_WIDTH + 10;
     }
 
     @Override
     public int getDisplayHeight() {
-        return 50;
+        return RecipeLayoutConstants.PRECIPITATE_HEIGHT + 10;
     }
 
     @Override
     public List<Widget> setupDisplay(REIPrecipitateDisplay display, Rectangle bounds) {
         List<Widget> widgets = new ArrayList<>();
-        Point startPoint = new Point(bounds.getCenterX() - 50, bounds.y + 5);
-
+        Point sp = new Point(bounds.x + 5, bounds.y + 5);
         widgets.add(Widgets.createRecipeBase(bounds));
 
         // Fluid in barrel
-        widgets.add(Widgets.createSlot(new Point(startPoint.x, startPoint.y + 15))
+        widgets.add(Widgets.createSlot(new Point(
+                sp.x + RecipeLayoutConstants.PRECIPITATE_FLUID_X,
+                sp.y + RecipeLayoutConstants.PRECIPITATE_FLUID_Y))
                 .entries(display.getInputEntries().get(1))
                 .markInput());
 
         // Item input (catalyst dropped in)
-        widgets.add(Widgets.createSlot(new Point(startPoint.x + 25, startPoint.y))
+        widgets.add(Widgets.createSlot(new Point(
+                sp.x + RecipeLayoutConstants.PRECIPITATE_ITEM_X,
+                sp.y + RecipeLayoutConstants.PRECIPITATE_ITEM_Y))
                 .entries(display.getInputEntries().get(0))
                 .markInput());
 
-        widgets.add(Widgets.createArrow(new Point(startPoint.x + 45, startPoint.y + 15)));
+        // Arrow
+        widgets.add(Widgets.createArrow(new Point(
+                sp.x + RecipeLayoutConstants.PRECIPITATE_ARROW_X,
+                sp.y + RecipeLayoutConstants.PRECIPITATE_ARROW_Y)));
 
         // Output
-        widgets.add(Widgets.createSlot(new Point(startPoint.x + 80, startPoint.y + 15))
-                .entries(display.getOutputEntries().getFirst())
+        widgets.add(Widgets.createSlot(new Point(
+                sp.x + RecipeLayoutConstants.PRECIPITATE_OUTPUT_X,
+                sp.y + RecipeLayoutConstants.PRECIPITATE_OUTPUT_Y))
+                .entries(display.getOutputEntries().get(0))
                 .markOutput());
 
         return widgets;
